// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`remediations delete bulk issues succeeds 1`] = `
{
  "archived": false,
  "auto_reboot": true,
  "created_at": "",
  "created_by": {
    "first_name": "test",
    "last_name": "user",
    "username": "testWriteUser",
  },
  "id": "",
  "issues": [
    {
      "description": "Unexpected bonding behavior with incorrect syntax in bond configuration files",
      "id": "advisor:bond_config_issue|NO_QUOTES",
      "precedence": null,
      "resolution": {
        "description": "Correct Bonding Config Items",
        "id": "fix",
        "needs_reboot": false,
        "resolution_risk": 3,
      },
      "resolutions_available": 1,
      "systems": [
        {
          "display_name": null,
          "hostname": "2e9c9324-d42f-461f-b35f-706e667e713a.example.com",
          "id": "2e9c9324-d42f-461f-b35f-706e667e713a",
          "resolved": false,
        },
        {
          "display_name": null,
          "hostname": "56db4b54-6273-48dc-b0be-41eb4dc87c7f.example.com",
          "id": "56db4b54-6273-48dc-b0be-41eb4dc87c7f",
          "resolved": false,
        },
        {
          "display_name": null,
          "hostname": "7f3d9680-c7dc-4c63-911b-c7037c19214c.example.com",
          "id": "7f3d9680-c7dc-4c63-911b-c7037c19214c",
          "resolved": false,
        },
        {
          "display_name": null,
          "hostname": "82d28ead-411f-4561-b934-906f1eebba1b.example.com",
          "id": "82d28ead-411f-4561-b934-906f1eebba1b",
          "resolved": false,
        },
        {
          "display_name": null,
          "hostname": "b72c7d02-7a97-4189-9a63-2c45232b8f7a",
          "id": "b72c7d02-7a97-4189-9a63-2c45232b8f7a",
          "resolved": false,
        },
        {
          "display_name": null,
          "hostname": "f5ce853a-c922-46f7-bd82-50286b7d8459",
          "id": "f5ce853a-c922-46f7-bd82-50286b7d8459",
          "resolved": false,
        },
      ],
    },
  ],
  "name": "bulk issue delete test",
  "needs_reboot": false,
  "resolved_count": 0,
  "updated_at": "",
  "updated_by": {
    "first_name": "test",
    "last_name": "user",
    "username": "testWriteUser",
  },
}
`;

exports[`remediations delete bulk plan empty list 1`] = `
{
  "errors": [
    {
      "code": "minItems.openapi.requestValidation",
      "id": "",
      "status": 400,
      "title": "must NOT have fewer than 1 items (location: body, path: remediation_ids)",
    },
  ],
}
`;

exports[`remediations delete bulk plan missing body 1`] = `
{
  "errors": [
    {
      "code": "required.openapi.requestValidation",
      "id": "",
      "status": 400,
      "title": "must have required property 'remediation_ids' (location: body, path: remediation_ids)",
    },
  ],
}
`;

exports[`remediations delete bulk plan too many IDs 1`] = `
{
  "errors": [
    {
      "code": "maxItems.openapi.requestValidation",
      "id": "",
      "status": 400,
      "title": "must NOT have more than 100 items (location: body, path: remediation_ids)",
    },
  ],
}
`;

exports[`remediations delete bulk systems does not remove systems from other plans 1`] = `
{
  "archived": false,
  "auto_reboot": true,
  "created_at": "",
  "created_by": {
    "first_name": "test",
    "last_name": "user",
    "username": "testWriteUser",
  },
  "id": "",
  "issues": [
    {
      "description": "Unexpected bonding behavior with incorrect syntax in bond configuration files",
      "id": "advisor:bond_config_issue|EXTRA_WHITESPACE",
      "precedence": null,
      "resolution": {
        "description": "Correct Bonding Config Items",
        "id": "fix",
        "needs_reboot": false,
        "resolution_risk": 3,
      },
      "resolutions_available": 1,
      "systems": [
        {
          "display_name": null,
          "hostname": "7f3d9680-c7dc-4c63-911b-c7037c19214c.example.com",
          "id": "7f3d9680-c7dc-4c63-911b-c7037c19214c",
          "resolved": false,
        },
        {
          "display_name": null,
          "hostname": "82d28ead-411f-4561-b934-906f1eebba1b.example.com",
          "id": "82d28ead-411f-4561-b934-906f1eebba1b",
          "resolved": false,
        },
        {
          "display_name": null,
          "hostname": "b72c7d02-7a97-4189-9a63-2c45232b8f7a",
          "id": "b72c7d02-7a97-4189-9a63-2c45232b8f7a",
          "resolved": false,
        },
      ],
    },
    {
      "description": "Unexpected bonding behavior with incorrect syntax in bond configuration files",
      "id": "advisor:bond_config_issue|NO_QUOTES",
      "precedence": null,
      "resolution": {
        "description": "Correct Bonding Config Items",
        "id": "fix",
        "needs_reboot": false,
        "resolution_risk": 3,
      },
      "resolutions_available": 1,
      "systems": [
        {
          "display_name": null,
          "hostname": "7f3d9680-c7dc-4c63-911b-c7037c19214c.example.com",
          "id": "7f3d9680-c7dc-4c63-911b-c7037c19214c",
          "resolved": false,
        },
        {
          "display_name": null,
          "hostname": "82d28ead-411f-4561-b934-906f1eebba1b.example.com",
          "id": "82d28ead-411f-4561-b934-906f1eebba1b",
          "resolved": false,
        },
        {
          "display_name": null,
          "hostname": "b72c7d02-7a97-4189-9a63-2c45232b8f7a",
          "id": "b72c7d02-7a97-4189-9a63-2c45232b8f7a",
          "resolved": false,
        },
      ],
    },
    {
      "description": "Kernel vulnerable to local privilege escalation via DCCP module (CVE-2017-6074)",
      "id": "advisor:CVE_2017_6074_kernel|KERNEL_CVE_2017_6074",
      "precedence": null,
      "resolution": {
        "description": "Make sure SELinux is enabled, enforcing and has selinux-policy-3.13.1-81.el7 or later on RHEL7",
        "id": "selinux_mitigate",
        "needs_reboot": true,
        "resolution_risk": 3,
      },
      "resolutions_available": 3,
      "systems": [
        {
          "display_name": null,
          "hostname": "7f3d9680-c7dc-4c63-911b-c7037c19214c.example.com",
          "id": "7f3d9680-c7dc-4c63-911b-c7037c19214c",
          "resolved": false,
        },
        {
          "display_name": null,
          "hostname": "82d28ead-411f-4561-b934-906f1eebba1b.example.com",
          "id": "82d28ead-411f-4561-b934-906f1eebba1b",
          "resolved": false,
        },
        {
          "display_name": null,
          "hostname": "b72c7d02-7a97-4189-9a63-2c45232b8f7a",
          "id": "b72c7d02-7a97-4189-9a63-2c45232b8f7a",
          "resolved": false,
        },
      ],
    },
    {
      "description": "Bonding will not fail over to the backup link when bonding options are partially read",
      "id": "advisor:network_bond_opts_config_issue|NETWORK_BONDING_OPTS_DOUBLE_QUOTES_ISSUE",
      "precedence": null,
      "resolution": {
        "description": "Correct Bonding Config Items",
        "id": "fix",
        "needs_reboot": false,
        "resolution_risk": 3,
      },
      "resolutions_available": 1,
      "systems": [
        {
          "display_name": null,
          "hostname": "7f3d9680-c7dc-4c63-911b-c7037c19214c.example.com",
          "id": "7f3d9680-c7dc-4c63-911b-c7037c19214c",
          "resolved": false,
        },
        {
          "display_name": null,
          "hostname": "82d28ead-411f-4561-b934-906f1eebba1b.example.com",
          "id": "82d28ead-411f-4561-b934-906f1eebba1b",
          "resolved": false,
        },
        {
          "display_name": null,
          "hostname": "b72c7d02-7a97-4189-9a63-2c45232b8f7a",
          "id": "b72c7d02-7a97-4189-9a63-2c45232b8f7a",
          "resolved": false,
        },
      ],
    },
  ],
  "name": "bulk system delete test 1",
  "needs_reboot": true,
  "resolved_count": 0,
  "updated_at": "",
  "updated_by": {
    "first_name": "test",
    "last_name": "user",
    "username": "testWriteUser",
  },
}
`;

exports[`remediations delete bulk systems does not remove systems from other plans 2`] = `
{
  "archived": false,
  "auto_reboot": true,
  "created_at": "",
  "created_by": {
    "first_name": "test",
    "last_name": "user",
    "username": "testWriteUser",
  },
  "id": "",
  "issues": [
    {
      "description": "Unexpected bonding behavior with incorrect syntax in bond configuration files",
      "id": "advisor:bond_config_issue|EXTRA_WHITESPACE",
      "precedence": null,
      "resolution": {
        "description": "Correct Bonding Config Items",
        "id": "fix",
        "needs_reboot": false,
        "resolution_risk": 3,
      },
      "resolutions_available": 1,
      "systems": [
        {
          "display_name": null,
          "hostname": "7f3d9680-c7dc-4c63-911b-c7037c19214c.example.com",
          "id": "7f3d9680-c7dc-4c63-911b-c7037c19214c",
          "resolved": false,
        },
        {
          "display_name": null,
          "hostname": "82d28ead-411f-4561-b934-906f1eebba1b.example.com",
          "id": "82d28ead-411f-4561-b934-906f1eebba1b",
          "resolved": false,
        },
        {
          "display_name": null,
          "hostname": "b72c7d02-7a97-4189-9a63-2c45232b8f7a",
          "id": "b72c7d02-7a97-4189-9a63-2c45232b8f7a",
          "resolved": false,
        },
      ],
    },
    {
      "description": "Unexpected bonding behavior with incorrect syntax in bond configuration files",
      "id": "advisor:bond_config_issue|NO_QUOTES",
      "precedence": null,
      "resolution": {
        "description": "Correct Bonding Config Items",
        "id": "fix",
        "needs_reboot": false,
        "resolution_risk": 3,
      },
      "resolutions_available": 1,
      "systems": [
        {
          "display_name": null,
          "hostname": "7f3d9680-c7dc-4c63-911b-c7037c19214c.example.com",
          "id": "7f3d9680-c7dc-4c63-911b-c7037c19214c",
          "resolved": false,
        },
        {
          "display_name": null,
          "hostname": "82d28ead-411f-4561-b934-906f1eebba1b.example.com",
          "id": "82d28ead-411f-4561-b934-906f1eebba1b",
          "resolved": false,
        },
        {
          "display_name": null,
          "hostname": "b72c7d02-7a97-4189-9a63-2c45232b8f7a",
          "id": "b72c7d02-7a97-4189-9a63-2c45232b8f7a",
          "resolved": false,
        },
      ],
    },
    {
      "description": "Kernel vulnerable to local privilege escalation via DCCP module (CVE-2017-6074)",
      "id": "advisor:CVE_2017_6074_kernel|KERNEL_CVE_2017_6074",
      "precedence": null,
      "resolution": {
        "description": "Make sure SELinux is enabled, enforcing and has selinux-policy-3.13.1-81.el7 or later on RHEL7",
        "id": "selinux_mitigate",
        "needs_reboot": true,
        "resolution_risk": 3,
      },
      "resolutions_available": 3,
      "systems": [
        {
          "display_name": null,
          "hostname": "7f3d9680-c7dc-4c63-911b-c7037c19214c.example.com",
          "id": "7f3d9680-c7dc-4c63-911b-c7037c19214c",
          "resolved": false,
        },
        {
          "display_name": null,
          "hostname": "82d28ead-411f-4561-b934-906f1eebba1b.example.com",
          "id": "82d28ead-411f-4561-b934-906f1eebba1b",
          "resolved": false,
        },
        {
          "display_name": null,
          "hostname": "b72c7d02-7a97-4189-9a63-2c45232b8f7a",
          "id": "b72c7d02-7a97-4189-9a63-2c45232b8f7a",
          "resolved": false,
        },
      ],
    },
    {
      "description": "Bonding will not fail over to the backup link when bonding options are partially read",
      "id": "advisor:network_bond_opts_config_issue|NETWORK_BONDING_OPTS_DOUBLE_QUOTES_ISSUE",
      "precedence": null,
      "resolution": {
        "description": "Correct Bonding Config Items",
        "id": "fix",
        "needs_reboot": false,
        "resolution_risk": 3,
      },
      "resolutions_available": 1,
      "systems": [
        {
          "display_name": null,
          "hostname": "7f3d9680-c7dc-4c63-911b-c7037c19214c.example.com",
          "id": "7f3d9680-c7dc-4c63-911b-c7037c19214c",
          "resolved": false,
        },
        {
          "display_name": null,
          "hostname": "82d28ead-411f-4561-b934-906f1eebba1b.example.com",
          "id": "82d28ead-411f-4561-b934-906f1eebba1b",
          "resolved": false,
        },
        {
          "display_name": null,
          "hostname": "b72c7d02-7a97-4189-9a63-2c45232b8f7a",
          "id": "b72c7d02-7a97-4189-9a63-2c45232b8f7a",
          "resolved": false,
        },
      ],
    },
  ],
  "name": "bulk system delete test 1",
  "needs_reboot": true,
  "resolved_count": 0,
  "updated_at": "",
  "updated_by": {
    "first_name": "test",
    "last_name": "user",
    "username": "testWriteUser",
  },
}
`;

exports[`remediations delete bulk systems succeeds 1`] = `
{
  "archived": false,
  "auto_reboot": true,
  "created_at": "",
  "created_by": {
    "first_name": "test",
    "last_name": "user",
    "username": "testWriteUser",
  },
  "id": "",
  "issues": [
    {
      "description": "Unexpected bonding behavior with incorrect syntax in bond configuration files",
      "id": "advisor:bond_config_issue|EXTRA_WHITESPACE",
      "precedence": null,
      "resolution": {
        "description": "Correct Bonding Config Items",
        "id": "fix",
        "needs_reboot": false,
        "resolution_risk": 3,
      },
      "resolutions_available": 1,
      "systems": [
        {
          "display_name": null,
          "hostname": "7f3d9680-c7dc-4c63-911b-c7037c19214c.example.com",
          "id": "7f3d9680-c7dc-4c63-911b-c7037c19214c",
          "resolved": false,
        },
        {
          "display_name": null,
          "hostname": "82d28ead-411f-4561-b934-906f1eebba1b.example.com",
          "id": "82d28ead-411f-4561-b934-906f1eebba1b",
          "resolved": false,
        },
        {
          "display_name": null,
          "hostname": "b72c7d02-7a97-4189-9a63-2c45232b8f7a",
          "id": "b72c7d02-7a97-4189-9a63-2c45232b8f7a",
          "resolved": false,
        },
      ],
    },
    {
      "description": "Unexpected bonding behavior with incorrect syntax in bond configuration files",
      "id": "advisor:bond_config_issue|NO_QUOTES",
      "precedence": null,
      "resolution": {
        "description": "Correct Bonding Config Items",
        "id": "fix",
        "needs_reboot": false,
        "resolution_risk": 3,
      },
      "resolutions_available": 1,
      "systems": [
        {
          "display_name": null,
          "hostname": "7f3d9680-c7dc-4c63-911b-c7037c19214c.example.com",
          "id": "7f3d9680-c7dc-4c63-911b-c7037c19214c",
          "resolved": false,
        },
        {
          "display_name": null,
          "hostname": "82d28ead-411f-4561-b934-906f1eebba1b.example.com",
          "id": "82d28ead-411f-4561-b934-906f1eebba1b",
          "resolved": false,
        },
        {
          "display_name": null,
          "hostname": "b72c7d02-7a97-4189-9a63-2c45232b8f7a",
          "id": "b72c7d02-7a97-4189-9a63-2c45232b8f7a",
          "resolved": false,
        },
      ],
    },
    {
      "description": "Kernel vulnerable to local privilege escalation via DCCP module (CVE-2017-6074)",
      "id": "advisor:CVE_2017_6074_kernel|KERNEL_CVE_2017_6074",
      "precedence": null,
      "resolution": {
        "description": "Make sure SELinux is enabled, enforcing and has selinux-policy-3.13.1-81.el7 or later on RHEL7",
        "id": "selinux_mitigate",
        "needs_reboot": true,
        "resolution_risk": 3,
      },
      "resolutions_available": 3,
      "systems": [
        {
          "display_name": null,
          "hostname": "7f3d9680-c7dc-4c63-911b-c7037c19214c.example.com",
          "id": "7f3d9680-c7dc-4c63-911b-c7037c19214c",
          "resolved": false,
        },
        {
          "display_name": null,
          "hostname": "82d28ead-411f-4561-b934-906f1eebba1b.example.com",
          "id": "82d28ead-411f-4561-b934-906f1eebba1b",
          "resolved": false,
        },
        {
          "display_name": null,
          "hostname": "b72c7d02-7a97-4189-9a63-2c45232b8f7a",
          "id": "b72c7d02-7a97-4189-9a63-2c45232b8f7a",
          "resolved": false,
        },
      ],
    },
    {
      "description": "Bonding will not fail over to the backup link when bonding options are partially read",
      "id": "advisor:network_bond_opts_config_issue|NETWORK_BONDING_OPTS_DOUBLE_QUOTES_ISSUE",
      "precedence": null,
      "resolution": {
        "description": "Correct Bonding Config Items",
        "id": "fix",
        "needs_reboot": false,
        "resolution_risk": 3,
      },
      "resolutions_available": 1,
      "systems": [
        {
          "display_name": null,
          "hostname": "7f3d9680-c7dc-4c63-911b-c7037c19214c.example.com",
          "id": "7f3d9680-c7dc-4c63-911b-c7037c19214c",
          "resolved": false,
        },
        {
          "display_name": null,
          "hostname": "82d28ead-411f-4561-b934-906f1eebba1b.example.com",
          "id": "82d28ead-411f-4561-b934-906f1eebba1b",
          "resolved": false,
        },
        {
          "display_name": null,
          "hostname": "b72c7d02-7a97-4189-9a63-2c45232b8f7a",
          "id": "b72c7d02-7a97-4189-9a63-2c45232b8f7a",
          "resolved": false,
        },
      ],
    },
  ],
  "name": "bulk system delete test 1",
  "needs_reboot": true,
  "resolved_count": 0,
  "updated_at": "",
  "updated_by": {
    "first_name": "test",
    "last_name": "user",
    "username": "testWriteUser",
  },
}
`;
